--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.github.dexafree:materiallist:2.0.0'
     compile files('libs/volley.jar')
 }
