--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.github.dexafree:materiallist:2.0.0'
     compile files('libs/volley.jar')
+    compile files('libs/jsoup-1.8.1.jar')
+    compile project(':materialList')
 }
